Fix bandit report: use my own branch of the action

--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -11,13 +11,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Bandit security check for code
-        uses: ioggstream/bandit-report-artifacts@v0.0.2
+        uses: akaihola/bandit-report-artifacts@use-config
         with:
           project_path: .
           config_file: ./.bandit.code.yaml
 
       - name: Bandit security check for tests
-        uses: ioggstream/bandit-report-artifacts@v0.0.2
+        uses: akaihola/bandit-report-artifacts@use-config
         with:
           project_path: ./src/darker/tests
           config_file: ./.bandit.tests.yaml
