--- a/contributors.yaml
+++ b/contributors.yaml
@@ -68,6 +68,8 @@ guettli:
   - {link_type: issues, type: Bug reports}
 hauntsaninja:
   - {link_type: issues, type: Bug reports}
+ioggstream:
+  - {link_type: search-issues, type: Bug reports}
 irynahryshanovich:
   - {link_type: issues, type: Bug reports}
 ivanov:
