Add @gdiscry as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -58,6 +58,8 @@ flying-sheep:
   - {link_type: issues, type: Bug reports}
 foxwhite25:
   - {link_type: search, type: Bug reports}
+gdiscry:
+  - {link_type: pulls-author, type: Code}
 guettli:
   - {link_type: issues, type: Bug reports}
 hauntsaninja:
