Doc for linter version specifiers, amend changelog

--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ inputs:
   lint:
     description: >-
       Comma-separated list of linters to `pip install` and run from Darker.
-      Optionally, version constraints (using pip syntax) can be specifed.
+      Optionally, version constraints (using pip syntax) can be specified.
       Example: flake8,pylint==2.13.1
     required: false
     default: ''
