--- a/contributors.yaml
+++ b/contributors.yaml
@@ -30,6 +30,8 @@ Pacu2:
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
 RishiKumarRay:
   - {link_type: search, type: Bug reports}
+Yajo:
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 agandra:
   - {link_type: issues, type: Bug reports}
 akaihola:
@@ -51,7 +53,7 @@ chrisdecker1201:
   - {link_type: pulls-author, type: Code}
   - {link_type: issues, type: Bug reports}
 dhrvjha:
-  - {link_type: search-issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
   - {link_type: pulls-author, type: Code}
 dsmanl:
   - {link_type: issues, type: Bug reports}
@@ -68,7 +70,7 @@ guettli:
 hauntsaninja:
   - {link_type: issues, type: Bug reports}
 ioggstream:
-  - {link_type: search-issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 irynahryshanovich:
   - {link_type: issues, type: Bug reports}
 ivanov:
