--- a/contributors.yaml
+++ b/contributors.yaml
@@ -28,6 +28,8 @@ Mystic-Mirage:
 Pacu2:
   - {link_type: pulls-author, type: Code}
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
+PatrickJordanCongenica:
+  - {link_type: search-discussions, type: Bug reports}
 RishiKumarRay:
   - {link_type: search, type: Bug reports}
 Yajo:
@@ -91,6 +93,8 @@ jedie:
   - {link_type: issues, type: Bug reports}
 jenshnielsen:
   - {link_type: search, type: Bug reports}
+jsuit:
+  - {link_type: search-discussions, type: Bug reports}
 leotrs:
   - {link_type: issues, type: Bug reports}
 levouh:
@@ -136,6 +140,8 @@ shangxiao:
   - {link_type: issues, type: Bug reports}
 sherbie:
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
+simgunz:
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 talhajunaidd:
   - {link_type: commits, type: Code}
 tgross35:
