--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ test =
     flake8-comprehensions>=3.7.0
     mypy>=0.940
     pygments
-    pylint
+    pylint>=2.6.0
     pytest>=6.2.0
     pytest-darker
     pytest-flake8>=1.0.6
