--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -15,4 +15,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           mypy: true
+          mypy_args: "src"
           continue_on_error: false
